# spdx-rs

./: .gitignore  .ort.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  commitlint.yml  release.yml  reuse.yml  rust.yml
.reuse/: dep5
src/: algorithm.rs  annotation.rs  checksum.rs  document_creation_information.rs  doubleopen.rs  error.rs  external_document_reference.rs  external_package_reference.rs  file_information.rs  file_type.rs  graph.rs  lib.rs  license_list.rs  other_licensing_information_detected.rs  package_information.rs  package_verification_code.rs  relationship.rs  snippet.rs  spdx_expression.rs
src/graph/: mod.rs
src/models/: algorithm.rs  annotation.rs  checksum.rs  creation_info.rs  document_creation_information.rs  external_document_reference.rs  file_information.rs  file_type.rs  mod.rs  other_licensing_information_detected.rs  package_information.rs  relationship.rs  snippet.rs  spdx.rs  spdx_document.rs  spdx_expression.rs
src/parsers/: mod.rs  tag_value.rs
tests/: integration.rs
tests/data/: SPDXForGraph.spdx.json  SPDXJSONExample-v2.3.spdx.json  SPDXSimpleTag.tag  SPDXTagExample-v2.2.spdx  SPDXTagExample-v2.3.spdx
