# SPDX-FileCopyrightText: 2020-2021 HH Partners
# 
# SPDX-License-Identifier: MIT

[package]
name = "spdx-rs"
version = "0.1.0"
authors = ["Mikko Murto <mikko.murto@hhpartners.fi>"]
edition = "2018"
license = "MIT"
description = "Parse and interact with SPDX Documents"
homepage = "https://github.com/doubleopen-project/spdx-rs"
repository = "https://github.com/doubleopen-project/spdx-rs"
exclude = [
  "/tests/",
  "/.github/",
  "/.gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml = "0.8"
boolean_expression = "0.4"
log = "0.4"
uuid = { version = "0.8", features = ["v4"] }
nom = "6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
thiserror = "1"
petgraph = "0.6"
